--- a/templates/datadog_footer.conf.erb
+++ b/templates/datadog_footer.conf.erb
@@ -10,47 +10,12 @@ collect_ec2_tags: <%= @collect_ec2_tags %>
 # for more information
 collect_instance_metadata: <%= @collect_instance_metadata %>
 
-# Set the threshold for accepting points to allow anything
-# with recent_point_threshold seconds
-# Defaults to 30 seconds if no value is provided
-
-<% if @recent_point_threshold.empty? -%>
-# recent_point_threshold: 30
-<% else -%>
-recent_point_threshold: <%= @recent_point_threshold %>
-<% end -%>
-
-# Change port the Agent is listening to
-<% if @listen_port.to_s.empty? -%>
-# listen_port: 17123
-<% else -%>
-listen_port: <%= @listen_port %>
-<% end -%>
-
-# Start a graphite listener on this port
-<% if @graphite_listen_port.to_s.empty? -%>
-# graphite_listen_port: 17124
-<% else -%>
-graphite_listen_port: <%= @graphite_listen_port %>
-<% end -%>
-
 # Additional directory to look for Datadog checks
 <% if @additional_checksd.nil? -%>
 # additional_checksd: /etc/dd-agent/checks.d/
 <% else -%>
 additional_checksd: <%= @additional_checksd %>
 <% end -%>
-
-# Allow non-local traffic to this Agent
-# This is required when using this Agent as a proxy for other Agents
-# that might not have an internet connection
-# For more information, please see
-# https://github.com/DataDog/dd-agent/wiki/Network-Traffic-and-Proxy-Configuration
-non_local_traffic: <%= @non_local_traffic %>
-
-# Select the Tornado HTTP Client in the forwarder
-# Default to the simple http client
-use_curl_http_client: <%= @use_curl_http_client %>
 
 # The loopback address the Forwarder and Dogstatsd will bind.
 # Optional, it is mainly used when running the agent on Openshift
@@ -106,25 +71,8 @@ use_dogstatsd: <%= @use_dogstatsd ? "yes" : "no" %>
 dogstatsd_port: <%= @dogstatsd_port %>
 <% end -%>
 
-# By default dogstatsd will post aggregate metrics to the Agent (which handles
-# errors/timeouts/retries/etc). To send directly to the datadog api, set this
-# to https://app.datadoghq.com.
-<% if @dogstatsd_target.empty? -%>
-# dogstatsd_target: http://localhost:17123
-<% else -%>
-dogstatsd_target: <%= @dogstatsd_target %>
-<% end -%>
-
-## The dogstatsd flush period.
-<% if @dogstatsd_interval.empty? -%>
-# dogstatsd_interval: 10
-<% else -%>
-dogstatsd_interval: <%= @dogstatsd_interval -%>
-<% end -%>
-
-## If 'yes', counters and rates will be normalized to 1 second (that is divided
-## by the dogstatsd_interval) before being sent to the server. Defaults to 'yes'
-dogstatsd_normalize: <%= @dogstatsd_normalize ? "yes" : "no" %>
+# Set to true to make DogStatsD listen to non local UDP traffic.
+dogstatsd_non_local_traffic: <%= @dogstatsd_non_local_traffic %>
 
 histogram_percentiles: <%= @statsd_histogram_percentiles %>
 
@@ -162,97 +110,12 @@ statsd_forward_port: <%= @statsd_forward_port %>
 device_blacklist_re: <%= @device_blacklist_re %>
 <% end -%>
 
-# -------------------------------------------------------------------------- #
-#   Ganglia                                                                  #
-# -------------------------------------------------------------------------- #
-
-<% if @ganglia_host.empty? -%>
-# Ganglia host where gmetad is running
-# ganglia_host: localhost
-#
-# Ganglia port where gmetad is running
-# ganglia_port: 8651
-<% else -%>
-# Ganglia host where gmetad is running
-ganglia_host: <%= @ganglia_host %>
-
-# Ganglia port where gmetad is running
-ganglia_port: <%= @ganglia_port %>
-<% end -%>
-
-
-# -------------------------------------------------------------------------- #
-#  Dogstream (log file parser)
-# -------------------------------------------------------------------------- #
-
-# Comma-separated list of logs to parse and optionally custom parsers to use.
-# The form should look like this:
-#
-#   dogstreams: /path/to/log1:parsers_module:custom_parser, /path/to/log2, /path/to/log3, ...
-#
-# Or this:
-#
-#   dogstreams: /path/to/log1:/path/to/my/parsers_module.py:custom_parser, /path/to/log2, /path/to/log3, ...
-#
-# Each entry is a path to a log file and optionally a Python module/function pair
-# separated by colons.
-#
-# Custom parsers should take a 2 parameters, a logger object and
-# a string parameter of the current line to parse. It should return a tuple of
-# the form:
-#   (metric (str), timestamp (unix timestamp), value (float), attributes (dict))
-# where attributes should at least contain the key 'metric_type', specifying
-# whether the given metric is a 'counter' or 'gauge'.
-#
-# Unless parsers are specified with an absolute path, the modules must exist in
-# the Agent's PYTHONPATH. You can set this as an environment variable when
-# starting the Agent. If the name of the custom parser function is not passed,
-# 'parser' is assumed.
-#
-# If this value isn't specified, the default parser assumes this log format:
-#     metric timestamp value key0=val0 key1=val1 ...
-#
-<%
-if not @dogstreams.empty?
--%>
-dogstreams: <%= @dogstreams.join(', ') %>
-<% end -%>
-
-# ========================================================================== #
-# Custom Emitters                                                            #
-# ========================================================================== #
-
-# Comma-separated list of emitters to be used in addition to the standard one
-#
-# Expected to be passed as a comma-separated list of colon-delimited
-# name/object pairs.
-#
-<% if @custom_emitters.empty? -%>
-# custom_emitters: /usr/local/my-code/emitters/rabbitmq.py:RabbitMQEmitter
-<% else -%>
-custom_emitters: <%= @custom_emitters %>
-<% end -%>
-#
-# If the name of the emitter function is not specified, 'emitter' is assumed.
-
 
 # ========================================================================== #
 # Logging
 # ========================================================================== #
 
 log_level: <%= @_loglevel %>
-
-<% if @collector_log_file.empty? -%>
-# collector_log_file: /var/log/datadog/collector.log
-<% else -%>
-collector_log_file: <%= @collector_log_file %>
-<% end -%>
-
-<% if @forwarder_log_file.empty? -%>
-# forwarder_log_file: /var/log/datadog/forwarder.log
-<% else -%>
-forwarder_log_file: <%= @forwarder_log_file %>
-<% end -%>
 
 <% if @dogstatsd_log_file.empty? -%>
 # dogstatsd_log_file: /var/log/datadog/dogstatsd.log
@@ -265,24 +128,6 @@ dogstatsd_log_file: <%= @dogstatsd_log_file  %>
 <% else -%>
 pup_log_file: <%= @pup_log_file  %>
 <% end -%>
-
-
-# if syslog is enabled but a host and port are not set, a local domain socket
-# connection will be attempted
-#
-log_to_syslog: <%= @log_to_syslog ? "yes" : "no" %>
-<% if @syslog_host.empty? -%>
-# syslog_host:
-<% else -%>
-syslog_host: <%= @syslog_host  %>
-<% end -%>
-
-<% if @syslog_port.to_s.empty? -%>
-# syslog_port:
-<% else -%>
-syslog_port: <%= @syslog_port  %>
-<% end -%>
-
 
 # ========================================================================== #
 # Service Discovery
@@ -327,13 +172,6 @@ sd_template_dir: <%= @sd_template_dir %>
 # Enable JMX checks for service discovery
 <% if @sd_jmx_enable -%>
 sd_jmx_enable: <%= @sd_jmx_enable %>
-<% end -%>
-
-# If you Consul store requires token authentication for service discovery, you can define that token here.
-<% if @consul_token.empty? -%>
-# consul_token: f45cbd0b-5022-samp-le00-4eaa7c1f40f1
-<% else -%>
-consul_token: <%= @consul_token %>
 <% end -%>
 
 <% if @process_enabled -%>
